fix: page class margin-top on mobile

--- a/app/src/ui/style/pages.scss
+++ b/app/src/ui/style/pages.scss
@@ -5,6 +5,8 @@
   margin: 0 auto;
   padding: 0 24px 40px;
   margin-top: 100px;
+
+  @media only screen and (max-width: $mobile) {margin-top: 72px;}
 }
 
 .page-wide {
